Updates receiver to verify checksum passed with the data
We're using the Adler32 algorithm to generate the checksum. We've pulled
in the 3rd party adler32 library to help us do the verification.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "body-parser": "^1.6.2",
     "express": "^4.8.2",
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^1.14.5",
+      "adler-32": "*"
   },
   "devDependencies": {},
   "scripts": {
