Updates Adler32 npm library we use on the receiver side
The old one didn't work if our data string got too long. I've replaced it
with a new one which seems to work correctly with real world data strings.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "body-parser": "^1.6.2",
     "express": "^4.8.2",
     "jasmine-node": "^1.14.5",
-      "adler-32": "*"
+      "adler32-js": "*"
   },
   "devDependencies": {},
   "scripts": {
