--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.6.2",
     "express": "^4.8.2",
     "jasmine-node": "^1.14.5",
-      "adler32-js": "*"
+    "adler32-js": "*",
+    "crc": "*"
   },
   "devDependencies": {},
   "scripts": {
